--- a/manual.html
+++ b/manual.html
@@ -62,6 +62,7 @@ ul.task-list li input[type="checkbox"] {
 
 <section id="t-test" class="level1">
 <h1>t-Test</h1>
+<p>keiner mag t tests :/</p>
 <section id="paired-samples" class="level2">
 <h2 class="anchored" data-anchor-id="paired-samples">Paired samples</h2>
 </section>
