--- a/manual.html
+++ b/manual.html
@@ -3027,7 +3027,7 @@ vertical-align: -.125em;
   <li>
 <a href="#regression" id="toc-regression" class="nav-link" data-scroll-target="#regression">Regression</a>
   <ul class="collapse">
-<li><a href="#linear-multiple-predictors" id="toc-linear-multiple-predictors" class="nav-link" data-scroll-target="#linear-multiple-predictors">Linear, multiple predictors</a></li>
+<li><a href="#linear-multiple-predictors-david" id="toc-linear-multiple-predictors-david" class="nav-link" data-scroll-target="#linear-multiple-predictors-david">Linear, multiple predictors (David)</a></li>
   <li><a href="#logistic-multiple-predictors" id="toc-logistic-multiple-predictors" class="nav-link" data-scroll-target="#logistic-multiple-predictors">Logistic, multiple predictors</a></li>
   <li><a href="#multilevel" id="toc-multilevel" class="nav-link" data-scroll-target="#multilevel">Multilevel</a></li>
   <li><a href="#anova-2x2-between-design" id="toc-anova-2x2-between-design" class="nav-link" data-scroll-target="#anova-2x2-between-design">ANOVA, 2x2 between design</a></li>
@@ -3096,7 +3096,7 @@ vertical-align: -.125em;
 <section id="paired-samples" class="level2"><h2 class="anchored" data-anchor-id="paired-samples">Paired samples</h2>
 </section><section id="independent-samples" class="level2"><h2 class="anchored" data-anchor-id="independent-samples">Independent samples</h2>
 </section></section><section id="regression" class="level1"><h1>Regression</h1>
-<section id="linear-multiple-predictors" class="level2"><h2 class="anchored" data-anchor-id="linear-multiple-predictors">Linear, multiple predictors</h2>
+<section id="linear-multiple-predictors-david" class="level2"><h2 class="anchored" data-anchor-id="linear-multiple-predictors-david">Linear, multiple predictors (David)</h2>
 </section><section id="logistic-multiple-predictors" class="level2"><h2 class="anchored" data-anchor-id="logistic-multiple-predictors">Logistic, multiple predictors</h2>
 </section><section id="multilevel" class="level2"><h2 class="anchored" data-anchor-id="multilevel">Multilevel</h2>
 </section><section id="anova-2x2-between-design" class="level2"><h2 class="anchored" data-anchor-id="anova-2x2-between-design">ANOVA, 2x2 between design</h2>
@@ -3443,7 +3443,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
 <span id="cb2-49"><a href="#cb2-49" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb2-50"><a href="#cb2-50" aria-hidden="true" tabindex="-1"></a><span class="fu"># Regression</span></span>
 <span id="cb2-51"><a href="#cb2-51" aria-hidden="true" tabindex="-1"></a></span>
-<span id="cb2-52"><a href="#cb2-52" aria-hidden="true" tabindex="-1"></a><span class="fu">## Linear, multiple predictors</span></span>
+<span id="cb2-52"><a href="#cb2-52" aria-hidden="true" tabindex="-1"></a><span class="fu">## Linear, multiple predictors (David)</span></span>
 <span id="cb2-53"><a href="#cb2-53" aria-hidden="true" tabindex="-1"></a></span>
 <span id="cb2-54"><a href="#cb2-54" aria-hidden="true" tabindex="-1"></a><span class="fu">## Logistic, multiple predictors</span></span>
 <span id="cb2-55"><a href="#cb2-55" aria-hidden="true" tabindex="-1"></a></span>
